--- a/CSharpLC/CSharpLC.csproj
+++ b/CSharpLC/CSharpLC.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constant.cs" />
     <Compile Include="CSharpDataType.cs" />
+    <Compile Include="MethodCalling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
