--- a/CSharpL/CSharpL.csproj
+++ b/CSharpL/CSharpL.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="CSharpL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Typeconversion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
