--- a/DemoAppAngularJS/DemoAppAngularJS.csproj
+++ b/DemoAppAngularJS/DemoAppAngularJS.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DDD890B9-7CC0-49B5-8038-0CE2D54FD9A1}</ProjectGuid>
+    <ProjectGuid>{EA79B0A6-E926-4693-9E70-36D7DFBFFB7F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CSharpLC</RootNamespace>
-    <AssemblyName>CSharpLC</AssemblyName>
+    <RootNamespace>DemoAppAngularJS</RootNamespace>
+    <AssemblyName>DemoAppAngularJS</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,9 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constant.cs" />
-    <Compile Include="CSharpDataType.cs" />
-    <Compile Include="MethodCalling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,12 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Cookie.html" />
-    <Content Include="Example.html" />
-    <Content Include="HelloJS.html" />
-    <Content Include="InnerLoop.html" />
-    <Content Include="JSFirst.js" />
-    <Content Include="Test.html" />
+    <Content Include="AJS.html" />
+    <Content Include="AJSRepeat.html" />
+    <Content Include="myfirstExample.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
